Fix `Sidebar` items gap

--- a/src/components/Sidebar/_sidebar.scss
+++ b/src/components/Sidebar/_sidebar.scss
@@ -32,7 +32,7 @@
     display: none;
     flex-direction: column;
     padding: 1rem 0;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   &__item {
